# tms

./: .gitignore  Cargo.toml  README.md
.github/workflows/: update-homebrew.yml
Formula/: tms.rb
src/: cli.rs  commands.rs  error.rs  main.rs  program.rs  project.rs  tmux.rs  utils.rs
src/commands/: hello.rs
