[package]
name = "tms"
version = "1.0.0"
edition = "2021"
authors = ["Guilherme Coelho"]
description = "A CLI tool for managing tmux sessions with git projects."
homepage = "https://github.com/grvcoelho/tms"
repository = "https://github.com/grvcoelho/tms"
license = "Apache-2.0"
keywords = ["tmux", "git", "tmux-sessionizer", "fzf", "tms"]

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
thiserror = "1.0.64"
which = "6.0.3"
